[package]
name = "abstract_pipeline_parsers"
version = "0.1.0"
authors = ["nikita-skobov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
abstract_pipeline_runner = { git = "https://github.com/nikita-skobov/abstract-pipeline-runner" }
